2012-09-04  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* Makefile (VCEFLAGS): Changed from /EHsc to /EHs which fixed a problem
	in tests/once3.c which was causing it to hang.

2012-09-03  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* Makefile (VCE-static): Add VC++ static build target
	(VCE-static-debug): Likewise.

2012-08-29  Daniel Richard. G <danielg at teragram dot com>

	* mutex6.c: Removed pointless exit(0) and never-reached comment.
	* mutex6r.c: Likewise.
	* mutex6rs.c: Likewise.
	* mutex6s.c: Likewise.
	* mutex6e.c: Likewise.
	* mutex6es.c: Likewise.
	* mutex7.c: Likewise.
	* mutex7e.c: Likewise.
	* mutex7n.c: Likewise.
	* mutex7r.c: Likewise.
	* mutex6n.c: Likewise; ensure operator precedence.
	* once2.c (sharedInt_t): replace static initialization of struct with memset.
	* once3.c: Likewise.
	* once4.c: Likewise.
	* cleanup0.c: Likewise.
	* cleanup1.c: Likewise.
	* cleanup2.c: Likewise.
	* cleanup3.c: Likewise.
	* openmp1.c: Fix casts.
	* exit1.c: Remove assert statement that is never reached and return 1.
	* exception2.c: Prevent displaying modal error dialog.

2012-08-19  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* join4.c: Test for new pthread_timedjoin_np routine
	* Makefile (join4): Added.
	* GNUmakefile (join4): Added.
	* Bmakefile (join4): Added.
	* Wmakefile (join4): Added.
	* test.h (sys/timeb.h): Add #include.
	* mutex8.c (sys/timeb.h): Remove #include.
	* mutex8e.c (sys/timeb.h): Remove #include.
	* mutex8n.c (sys/timeb.h): Remove #include.
	* mutex8r.c (sys/timeb.h): Remove #include.
	* benchtest1.c (sys/timeb.h): Remove #include.
	* benchtest2.c (sys/timeb.h): Remove #include.
	* benchtest3.c (sys/timeb.h): Remove #include.
	* benchtest4.c (sys/timeb.h): Remove #include.
	* benchtest5.c (sys/timeb.h): Remove #include.

2012-08-11  Daniel Richard. G <danielg at teragram dot com>

	* Makefile: Various improvements.
	* GNUmakefile: Likewise.
